@@ -2,342 +2,171 @@ package mp.slave_mod.procedures;
 
 import net.minecraftforge.items.ItemHandlerHelper;
 
-import net.minecraft.world.World;
-import net.minecraft.world.IWorld;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.AxisAlignedBB;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.item.Items;
-import net.minecraft.item.ItemStack;
-import net.minecraft.inventory.container.Slot;
-import net.minecraft.inventory.container.Container;
-import net.minecraft.entity.player.ServerPlayerEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.SpawnReason;
-import net.minecraft.entity.MobEntity;
-import net.minecraft.entity.ILivingEntityData;
-import net.minecraft.entity.Entity;
+import net.minecraft.world.phys.Vec3;
+import net.minecraft.world.phys.AABB;
+import net.minecraft.world.level.LevelAccessor;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.inventory.Slot;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.entity.MobSpawnType;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.core.BlockPos;
 
-import mp.slave_mod.entity.OtrokEntity;
+import mp.slave_mod.init.SlaveModModEntities;
 import mp.slave_mod.entity.EncagedOtrokEntity;
 import mp.slave_mod.entity.EncagedOtrok2Entity;
-import mp.slave_mod.SlaveModModElements;
-import mp.slave_mod.SlaveModMod;
 
-import java.util.stream.Collectors;
 import java.util.function.Supplier;
-import java.util.function.Function;
 import java.util.Map;
 import java.util.List;
 import java.util.Comparator;
 
-@SlaveModModElements.ModElement.Tag
-public class KupovaninoplsuProcedure extends SlaveModModElements.ModElement {
-	public KupovaninoplsuProcedure(SlaveModModElements instance) {
-		super(instance, 121);
-	}
-
-	public static void executeProcedure(Map<String, Object> dependencies) {
-		if (dependencies.get("entity") == null) {
-			if (!dependencies.containsKey("entity"))
-				SlaveModMod.LOGGER.warn("Failed to load dependency entity for procedure Kupovaninoplsu!");
+public class KupovaninoplsuProcedure {
+	public static void execute(LevelAccessor world, double x, double y, double z, Entity entity) {
+		if (entity == null)
 			return;
-		}
-		if (dependencies.get("x") == null) {
-			if (!dependencies.containsKey("x"))
-				SlaveModMod.LOGGER.warn("Failed to load dependency x for procedure Kupovaninoplsu!");
-			return;
-		}
-		if (dependencies.get("y") == null) {
-			if (!dependencies.containsKey("y"))
-				SlaveModMod.LOGGER.warn("Failed to load dependency y for procedure Kupovaninoplsu!");
-			return;
-		}
-		if (dependencies.get("z") == null) {
-			if (!dependencies.containsKey("z"))
-				SlaveModMod.LOGGER.warn("Failed to load dependency z for procedure Kupovaninoplsu!");
-			return;
-		}
-		if (dependencies.get("world") == null) {
-			if (!dependencies.containsKey("world"))
-				SlaveModMod.LOGGER.warn("Failed to load dependency world for procedure Kupovaninoplsu!");
-			return;
-		}
-		Entity entity = (Entity) dependencies.get("entity");
-		double x = dependencies.get("x") instanceof Integer ? (int) dependencies.get("x") : (double) dependencies.get("x");
-		double y = dependencies.get("y") instanceof Integer ? (int) dependencies.get("y") : (double) dependencies.get("y");
-		double z = dependencies.get("z") instanceof Integer ? (int) dependencies.get("z") : (double) dependencies.get("z");
-		IWorld world = (IWorld) dependencies.get("world");
-		if ((((new Object() {
-			public ItemStack getItemStack(int sltid) {
-				Entity _ent = entity;
-				if (_ent instanceof ServerPlayerEntity) {
-					Container _current = ((ServerPlayerEntity) _ent).openContainer;
-					if (_current instanceof Supplier) {
-						Object invobj = ((Supplier) _current).get();
-						if (invobj instanceof Map) {
-							return ((Slot) ((Map) invobj).get(sltid)).getStack();
-						}
-					}
-				}
-				return ItemStack.EMPTY;
-			}
-		}.getItemStack((int) (0))).getItem() == Items.EMERALD) && (((new Object() {
+		if ((entity instanceof Player _plrSlotItem && _plrSlotItem.containerMenu instanceof Supplier _splr && _splr.get() instanceof Map _slt ? ((Slot) _slt.get(0)).getItem() : ItemStack.EMPTY).getItem() == Items.EMERALD && new Object() {
 			public int getAmount(int sltid) {
-				if (entity instanceof ServerPlayerEntity) {
-					Container _current = ((ServerPlayerEntity) entity).openContainer;
-					if (_current instanceof Supplier) {
-						Object invobj = ((Supplier) _current).get();
-						if (invobj instanceof Map) {
-							ItemStack stack = ((Slot) ((Map) invobj).get(sltid)).getStack();;
-							if (stack != null)
-								return stack.getCount();
-						}
-					}
+				if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+					ItemStack stack = ((Slot) _slots.get(sltid)).getItem();
+					if (stack != null)
+						return stack.getCount();
 				}
 				return 0;
 			}
-		}.getAmount((int) (0))) >= 16) && ((((Entity) world
-				.getEntitiesWithinAABB(EncagedOtrokEntity.CustomEntity.class,
-						new AxisAlignedBB(x - (10 / 2d), y - (10 / 2d), z - (10 / 2d), x + (10 / 2d), y + (10 / 2d), z + (10 / 2d)), null)
-				.stream().sorted(new Object() {
-					Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
-						return Comparator.comparing((Function<Entity, Double>) (_entcnd -> _entcnd.getDistanceSq(_x, _y, _z)));
-					}
-				}.compareDistOf(x, y, z)).findFirst().orElse(null)) != null) || (((Entity) world
-						.getEntitiesWithinAABB(EncagedOtrok2Entity.CustomEntity.class,
-								new AxisAlignedBB(x - (10 / 2d), y - (10 / 2d), z - (10 / 2d), x + (10 / 2d), y + (10 / 2d), z + (10 / 2d)), null)
-						.stream().sorted(new Object() {
-							Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
-								return Comparator.comparing((Function<Entity, Double>) (_entcnd -> _entcnd.getDistanceSq(_x, _y, _z)));
-							}
-						}.compareDistOf(x, y, z)).findFirst().orElse(null)) != null))))) {
-			if (((entity.getPersistentData().getBoolean("purchase")) == (false))) {
+		}.getAmount(0) >= 16 && (!world.getEntitiesOfClass(EncagedOtrokEntity.class, AABB.ofSize(new Vec3(x, y, z), 10, 10, 10), e -> true).isEmpty()
+				|| !world.getEntitiesOfClass(EncagedOtrok2Entity.class, AABB.ofSize(new Vec3(x, y, z), 10, 10, 10), e -> true).isEmpty())) {
+			if (entity.getPersistentData().getBoolean("purchase") == false) {
 				{
-					List<Entity> _entfound = world
-							.getEntitiesWithinAABB(Entity.class,
-									new AxisAlignedBB(x - (10 / 2d), y - (10 / 2d), z - (10 / 2d), x + (10 / 2d), y + (10 / 2d), z + (10 / 2d)), null)
-							.stream().sorted(new Object() {
-								Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
-									return Comparator.comparing((Function<Entity, Double>) (_entcnd -> _entcnd.getDistanceSq(_x, _y, _z)));
-								}
-							}.compareDistOf(x, y, z)).collect(Collectors.toList());
+					final Vec3 _center = new Vec3(x, y, z);
+					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(10 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 					for (Entity entityiterator : _entfound) {
-						if ((((Entity) world.getEntitiesWithinAABB(EncagedOtrokEntity.CustomEntity.class,
-								new AxisAlignedBB(x - (10 / 2d), y - (10 / 2d), z - (10 / 2d), x + (10 / 2d), y + (10 / 2d), z + (10 / 2d)), null)
-								.stream().sorted(new Object() {
-									Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
-										return Comparator.comparing((Function<Entity, Double>) (_entcnd -> _entcnd.getDistanceSq(_x, _y, _z)));
-									}
-								}.compareDistOf(x, y, z)).findFirst().orElse(null)) != null)) {
-							if ((entityiterator instanceof EncagedOtrokEntity.CustomEntity)) {
-								if (!entityiterator.world.isRemote)
-									entityiterator.remove();
-								if (((new Object() {
+						if (!world.getEntitiesOfClass(EncagedOtrokEntity.class, AABB.ofSize(new Vec3(x, y, z), 10, 10, 10), e -> true).isEmpty()) {
+							if (entityiterator instanceof EncagedOtrokEntity) {
+								if (!entityiterator.level().isClientSide())
+									entityiterator.discard();
+								if (new Object() {
 									public int getAmount(int sltid) {
-										if (entity instanceof ServerPlayerEntity) {
-											Container _current = ((ServerPlayerEntity) entity).openContainer;
-											if (_current instanceof Supplier) {
-												Object invobj = ((Supplier) _current).get();
-												if (invobj instanceof Map) {
-													ItemStack stack = ((Slot) ((Map) invobj).get(sltid)).getStack();;
-													if (stack != null)
-														return stack.getCount();
-												}
-											}
+										if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+											ItemStack stack = ((Slot) _slots.get(sltid)).getItem();
+											if (stack != null)
+												return stack.getCount();
 										}
 										return 0;
 									}
-								}.getAmount((int) (0))) > 16)) {
-									if (entity instanceof PlayerEntity) {
-										Container _current = ((PlayerEntity) entity).openContainer;
-										if (_current instanceof Supplier) {
-											Object invobj = ((Supplier) _current).get();
-											if (invobj instanceof Map) {
-												ItemStack _setstack = new ItemStack(Items.EMERALD);
-												_setstack.setCount((int) ((new Object() {
-													public int getAmount(int sltid) {
-														if (entity instanceof ServerPlayerEntity) {
-															Container _current = ((ServerPlayerEntity) entity).openContainer;
-															if (_current instanceof Supplier) {
-																Object invobj = ((Supplier) _current).get();
-																if (invobj instanceof Map) {
-																	ItemStack stack = ((Slot) ((Map) invobj).get(sltid)).getStack();;
-																	if (stack != null)
-																		return stack.getCount();
-																}
-															}
-														}
-														return 0;
-													}
-												}.getAmount((int) (0))) - 16));
-												((Slot) ((Map) invobj).get((int) (0))).putStack(_setstack);
-												_current.detectAndSendChanges();
-											}
-										}
-									}
-								} else if (((new Object() {
-									public int getAmount(int sltid) {
-										if (entity instanceof ServerPlayerEntity) {
-											Container _current = ((ServerPlayerEntity) entity).openContainer;
-											if (_current instanceof Supplier) {
-												Object invobj = ((Supplier) _current).get();
-												if (invobj instanceof Map) {
-													ItemStack stack = ((Slot) ((Map) invobj).get(sltid)).getStack();;
+								}.getAmount(0) > 16) {
+									if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+										ItemStack _setstack = new ItemStack(Items.EMERALD).copy();
+										_setstack.setCount((int) (new Object() {
+											public int getAmount(int sltid) {
+												if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+													ItemStack stack = ((Slot) _slots.get(sltid)).getItem();
 													if (stack != null)
 														return stack.getCount();
 												}
+												return 0;
 											}
+										}.getAmount(0) - 16));
+										((Slot) _slots.get(0)).set(_setstack);
+										_player.containerMenu.broadcastChanges();
+									}
+								} else if (new Object() {
+									public int getAmount(int sltid) {
+										if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+											ItemStack stack = ((Slot) _slots.get(sltid)).getItem();
+											if (stack != null)
+												return stack.getCount();
 										}
 										return 0;
 									}
-								}.getAmount((int) (0))) == 16)) {
-									{
-										Entity _ent = entity;
-										if (_ent instanceof ServerPlayerEntity) {
-											Container _current = ((ServerPlayerEntity) _ent).openContainer;
-											if (_current instanceof Supplier) {
-												Object invobj = ((Supplier) _current).get();
-												if (invobj instanceof Map) {
-													((Slot) ((Map) invobj).get((int) (0))).decrStackSize((int) (16));
-													_current.detectAndSendChanges();
-												}
-											}
-										}
+								}.getAmount(0) == 16) {
+									if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+										((Slot) _slots.get(0)).remove(16);
+										_player.containerMenu.broadcastChanges();
 									}
 								}
-								if (entity instanceof PlayerEntity) {
-									ItemStack _setstack = new ItemStack(Items.LEAD);
-									_setstack.setCount((int) 1);
-									ItemHandlerHelper.giveItemToPlayer(((PlayerEntity) entity), _setstack);
+								if (entity instanceof Player _player) {
+									ItemStack _setstack = new ItemStack(Items.LEAD).copy();
+									_setstack.setCount(1);
+									ItemHandlerHelper.giveItemToPlayer(_player, _setstack);
 								}
-								if (world instanceof World && !world.getWorld().isRemote) {
-									Entity entityToSpawn = new OtrokEntity.CustomEntity(OtrokEntity.entity, world.getWorld());
-									entityToSpawn.setLocationAndAngles(x, y, z, world.getRandom().nextFloat() * 360F, 0);
-									if (entityToSpawn instanceof MobEntity)
-										((MobEntity) entityToSpawn).onInitialSpawn(world, world.getDifficultyForLocation(new BlockPos(entityToSpawn)),
-												SpawnReason.MOB_SUMMONED, (ILivingEntityData) null, (CompoundNBT) null);
-									world.addEntity(entityToSpawn);
+								if (world instanceof ServerLevel _level) {
+									Entity entityToSpawn = SlaveModModEntities.OTROK.get().spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+									if (entityToSpawn != null) {
+										entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+									}
 								}
-								entity.getPersistentData().putBoolean("purchase", (true));
+								entity.getPersistentData().putBoolean("purchase", true);
 							}
 						}
 					}
 				}
-			} else if (((entity.getPersistentData().getBoolean("purchase")) == (true))) {
+			} else if (entity.getPersistentData().getBoolean("purchase") == true) {
 				{
-					List<Entity> _entfound = world
-							.getEntitiesWithinAABB(Entity.class,
-									new AxisAlignedBB(x - (10 / 2d), y - (10 / 2d), z - (10 / 2d), x + (10 / 2d), y + (10 / 2d), z + (10 / 2d)), null)
-							.stream().sorted(new Object() {
-								Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
-									return Comparator.comparing((Function<Entity, Double>) (_entcnd -> _entcnd.getDistanceSq(_x, _y, _z)));
-								}
-							}.compareDistOf(x, y, z)).collect(Collectors.toList());
+					final Vec3 _center = new Vec3(x, y, z);
+					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(10 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 					for (Entity entityiterator : _entfound) {
-						if ((((Entity) world.getEntitiesWithinAABB(EncagedOtrok2Entity.CustomEntity.class,
-								new AxisAlignedBB(x - (10 / 2d), y - (10 / 2d), z - (10 / 2d), x + (10 / 2d), y + (10 / 2d), z + (10 / 2d)), null)
-								.stream().sorted(new Object() {
-									Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
-										return Comparator.comparing((Function<Entity, Double>) (_entcnd -> _entcnd.getDistanceSq(_x, _y, _z)));
-									}
-								}.compareDistOf(x, y, z)).findFirst().orElse(null)) != null)) {
-							if ((entityiterator instanceof EncagedOtrok2Entity.CustomEntity)) {
-								if (!entityiterator.world.isRemote)
-									entityiterator.remove();
-								if (((new Object() {
+						if (!world.getEntitiesOfClass(EncagedOtrok2Entity.class, AABB.ofSize(new Vec3(x, y, z), 10, 10, 10), e -> true).isEmpty()) {
+							if (entityiterator instanceof EncagedOtrok2Entity) {
+								if (!entityiterator.level().isClientSide())
+									entityiterator.discard();
+								if (new Object() {
 									public int getAmount(int sltid) {
-										if (entity instanceof ServerPlayerEntity) {
-											Container _current = ((ServerPlayerEntity) entity).openContainer;
-											if (_current instanceof Supplier) {
-												Object invobj = ((Supplier) _current).get();
-												if (invobj instanceof Map) {
-													ItemStack stack = ((Slot) ((Map) invobj).get(sltid)).getStack();;
-													if (stack != null)
-														return stack.getCount();
-												}
-											}
+										if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+											ItemStack stack = ((Slot) _slots.get(sltid)).getItem();
+											if (stack != null)
+												return stack.getCount();
 										}
 										return 0;
 									}
-								}.getAmount((int) (0))) > 16)) {
-									if (entity instanceof PlayerEntity) {
-										ItemStack _setstack = new ItemStack(Items.EMERALD);
-										_setstack.setCount((int) ((new Object() {
+								}.getAmount(0) > 16) {
+									if (entity instanceof Player _player) {
+										ItemStack _setstack = new ItemStack(Items.EMERALD).copy();
+										_setstack.setCount((int) (new Object() {
 											public int getAmount(int sltid) {
-												if (entity instanceof ServerPlayerEntity) {
-													Container _current = ((ServerPlayerEntity) entity).openContainer;
-													if (_current instanceof Supplier) {
-														Object invobj = ((Supplier) _current).get();
-														if (invobj instanceof Map) {
-															ItemStack stack = ((Slot) ((Map) invobj).get(sltid)).getStack();;
-															if (stack != null)
-																return stack.getCount();
-														}
-													}
+												if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+													ItemStack stack = ((Slot) _slots.get(sltid)).getItem();
+													if (stack != null)
+														return stack.getCount();
 												}
 												return 0;
 											}
-										}.getAmount((int) (0))) - 16));
-										ItemHandlerHelper.giveItemToPlayer(((PlayerEntity) entity), _setstack);
+										}.getAmount(0) - 16));
+										ItemHandlerHelper.giveItemToPlayer(_player, _setstack);
 									}
-									{
-										Entity _ent = entity;
-										if (_ent instanceof ServerPlayerEntity) {
-											Container _current = ((ServerPlayerEntity) _ent).openContainer;
-											if (_current instanceof Supplier) {
-												Object invobj = ((Supplier) _current).get();
-												if (invobj instanceof Map) {
-													((Slot) ((Map) invobj).get((int) (0))).decrStackSize((int) (64));
-													_current.detectAndSendChanges();
-												}
-											}
-										}
+									if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+										((Slot) _slots.get(0)).remove(64);
+										_player.containerMenu.broadcastChanges();
 									}
-								} else if (((new Object() {
+								} else if (new Object() {
 									public int getAmount(int sltid) {
-										if (entity instanceof ServerPlayerEntity) {
-											Container _current = ((ServerPlayerEntity) entity).openContainer;
-											if (_current instanceof Supplier) {
-												Object invobj = ((Supplier) _current).get();
-												if (invobj instanceof Map) {
-													ItemStack stack = ((Slot) ((Map) invobj).get(sltid)).getStack();;
-													if (stack != null)
-														return stack.getCount();
-												}
-											}
+										if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+											ItemStack stack = ((Slot) _slots.get(sltid)).getItem();
+											if (stack != null)
+												return stack.getCount();
 										}
 										return 0;
 									}
-								}.getAmount((int) (0))) == 16)) {
-									{
-										Entity _ent = entity;
-										if (_ent instanceof ServerPlayerEntity) {
-											Container _current = ((ServerPlayerEntity) _ent).openContainer;
-											if (_current instanceof Supplier) {
-												Object invobj = ((Supplier) _current).get();
-												if (invobj instanceof Map) {
-													((Slot) ((Map) invobj).get((int) (0))).decrStackSize((int) (16));
-													_current.detectAndSendChanges();
-												}
-											}
-										}
+								}.getAmount(0) == 16) {
+									if (entity instanceof Player _player && _player.containerMenu instanceof Supplier _current && _current.get() instanceof Map _slots) {
+										((Slot) _slots.get(0)).remove(16);
+										_player.containerMenu.broadcastChanges();
 									}
 								}
-								if (entity instanceof PlayerEntity) {
-									ItemStack _setstack = new ItemStack(Items.LEAD);
-									_setstack.setCount((int) 1);
-									ItemHandlerHelper.giveItemToPlayer(((PlayerEntity) entity), _setstack);
+								if (entity instanceof Player _player) {
+									ItemStack _setstack = new ItemStack(Items.LEAD).copy();
+									_setstack.setCount(1);
+									ItemHandlerHelper.giveItemToPlayer(_player, _setstack);
 								}
-								if (world instanceof World && !world.getWorld().isRemote) {
-									Entity entityToSpawn = new OtrokEntity.CustomEntity(OtrokEntity.entity, world.getWorld());
-									entityToSpawn.setLocationAndAngles(x, y, z, world.getRandom().nextFloat() * 360F, 0);
-									if (entityToSpawn instanceof MobEntity)
-										((MobEntity) entityToSpawn).onInitialSpawn(world, world.getDifficultyForLocation(new BlockPos(entityToSpawn)),
-												SpawnReason.MOB_SUMMONED, (ILivingEntityData) null, (CompoundNBT) null);
-									world.addEntity(entityToSpawn);
+								if (world instanceof ServerLevel _level) {
+									Entity entityToSpawn = SlaveModModEntities.OTROK.get().spawn(_level, BlockPos.containing(x, y, z), MobSpawnType.MOB_SUMMONED);
+									if (entityToSpawn != null) {
+										entityToSpawn.setYRot(world.getRandom().nextFloat() * 360F);
+									}
 								}
-								entity.getPersistentData().putBoolean("purchase", (false));
+								entity.getPersistentData().putBoolean("purchase", false);
 							}
 						}
 					}
